Fix null exception in abstractGroupingStage (#236)
* Add null handling in constructors

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* Update test

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* Update AbstractGroupingStage.java

Signed-off-by: Ziwen Wan <38177263+ZiwenWan@users.noreply.github.com>

* nit

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

---------

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>
Signed-off-by: Ziwen Wan <38177263+ZiwenWan@users.noreply.github.com>